tests/ui/parser/issues/issue-44021.stderr
error: expected one of `:`, `@`, or `|`, found `}`
  --> $DIR/issue-44021.rs:3:18
   |
LL |     fn f() {|x, y}
   |                  ^ expected one of `:`, `@`, or `|`

error: aborting due to 1 previous error

